ChangeLog

24/25 Apr 2020: revised the type of body parameters in fast_modules_asteroid, so asteroid_fast? can be more easily used with other bodies.

14 Apr 2020: dug up analytical solution to heat equation with Stefan-Boltzmann law boundary condition; added to UserGuide section 1.1. 

28 Feb 2020: added tempr_driver.f90 (was used to make Fig. 3 in my 2008 Milankovitch paper)

16 Jan 2020: added makegaussian.c

31 Dec 2019: Topo3D/ changed grid downsampling from 4 neighbors to 8 neighbors

30 Nov 2019: added Armand distribution as option for inital velocities in Exosphere/montecarlo.f90

22 Oct 2019: flux -> flux_mars77  in jsub, mars_mapi, mars_mapt2, and fast_subs_mars
Functions flux and flux_mars77 do not return the exact same results, because in flux_mars77 the atmospheric short-wavelength scattered irradiance is multiplied with (1-albedo).

21 Oct 2019: Added Mars/Tests/

12 Oct 2019: Release v1.1.6  doi:10.5281/zenodo.3483924

23 Sep 2019: added C version of conductionQ and its dependencies

20 Sep 2019: The long-used and much-used subroutine conductionQ received an upgrade. It now iterates when the surface temperature, which is the initial value for the linearization of the thermal radiation term, changes too fast. It was also converted from Fortran 77 to Fortran 90 (or Fortran 2008 actually). The old version of conductionQ is still available in release 1.1.5 and all earlier releases. The new version is conductionQ.f90. The change has also been propagated into conductionQ2.f90

Sep 2019: internal restructuring of horizons and viewfactor calculations, without external consequence

30 Aug 2019: changed definition of viewfactor by a factor of pi, so a half-sphere integrates to 1.

Aug 2019: fixed a bug in fieldofview_subs.f90 and redid test case

28 Jun 2019: added two more variants of cratersQ_mars
