@@ -28,3 +28,15 @@ make mars_fast
 ./mars_fast ph
 
 This will read input file lats.ph and produce output files depths.ph and depthF.ph
+
+
+
+4. Equilibrium ice table depths for various slopes:
+
+make mars_mapi2p
+
+mars_mapi2p_go.cmd
+
+reads inputs from mapgrid.slp and outputs mapgrid2.1 and mapgrid2.2
+the merged output is provided under the filename mapgrid2.slp
+
