@@ -42,10 +42,10 @@ mars_mapi: mars_mapi.o marsorbit.o jsub.o flux_mars.o soilthprop.o makefile
 	flux_mars.o $(SR)conductionQ.o $(SR)tridag.o $(SR)conductionT.o \
 	$(SR)grids.o soilthprop.o $(SR)psv.o jsub.o $(SR)psvco2.o 
 
-mars_mapiqh2v: mars_mapiqh2v.o jsubv.o marsorbit.o flux.o soilthprop.o \
+mars_mapi2p: mars_mapi2p.o jsubv.o marsorbit.o flux.o soilthprop.o \
 	makefile
 	make -C $(SR) common
-	$(CC) $(LFLAGS) mars_mapiqh2v.o jsubv.o $(SR)julday.o marsorbit.o \
+	$(CC) $(LFLAGS) mars_mapi2p.o jsubv.o $(SR)julday.o marsorbit.o \
 	flux.o $(SR)conductionQ.o $(SR)tridag.o $(SR)conductionT.o \
 	$(SR)grids.o $(SR)psv.o soilthprop.o
 
